@@ -152,6 +152,12 @@ class ICommonMetadata(zope.interface.Interface):
         title=_('VG Wort Id'),
         required=False)
 
+    dailyNewsletter = zope.schema.Bool(
+        title=_("Daily newsletter"),
+        description=_(
+            "Should this article be listed in the daily newsletter?"),
+        default=False)
+
 
 class IDAVPropertyConverter(zope.interface.Interface):
     """Parse a unicode string from a DAV property to a value and vice versa."""
